// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <H> Второго уровня 1`] = `
<div
  className="sc-bdVaJa SodCZ"
  size={2}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Дефолтная 1`] = `
<div
  className="sc-bdVaJa bhcTtE"
  size={1}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Первого уровня 1`] = `
<div
  className="sc-bdVaJa bhcTtE"
  size={1}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Пятого уровня 1`] = `
<div
  className="sc-bdVaJa kiVQoS"
  size={5}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Третьего уровня 1`] = `
<div
  className="sc-bdVaJa fghSOI"
  size={3}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Четвертого уровня 1`] = `
<div
  className="sc-bdVaJa kLzYLg"
  size={4}
>
  Header
</div>
`;

exports[`Верстка компонента <H> Шестого уровня 1`] = `
<div
  className="sc-bdVaJa hOyYxA"
  size={6}
>
  Header
</div>
`;
